Mon Dec 31 16:15:26 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* lib/hashtable.c (hash_install): Fix head comment to match reality
	  (thanks, Ivan Shmakov).

Mon Dec 31 15:45:31 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Revision control): Mention that the bzr archive now
	  requires bzr 0.15 or later.

Mon Dec 31 15:31:08 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.1-pre1.
	* po/man-db.pot, po/*.po: Update.

Mon Dec 31 10:02:28 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (passthrough): New helper function.
	  (pipeline_connect): Add special (kludge) handling for zero-command
	  sinks.
	  (pipeline_pump): Add minor commentary.
	* src/man.c (options, parse_opt): New -R/--recode option.
	  (make_roff_command): If --recode is used, suppress external
	  formatters and all processing filters, and force the output
	  encoding to the argument to --recode.
	  (display): If --recode is used, force display to stdout and
	  suppress cat pages.
	  (try_section, display_filesystem, display_database): Don't show
	  cat pages or follow .so links for --recode.
	* src/util.c (lang_dir): Handle relative filenames starting with
	  "man/".
	* man/man1/man.man1 (OPTIONS): Document --recode.
	* docs/NEWS: Document this.

Fri Dec 14 10:06:21 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (options): Note that --exact is for apropos only.

Fri Dec 14 09:39:06 GMT 2007  Colin Watson  <cjwatson@debian.org>

	Convert from getopt to argp for option parsing. This invalidates
	many translations, but this should be the last time; in future, a
	changes in a single option will only affect translations of the help
	strings for that option, not the program's entire help string.

	* gnulib: Import the argp and lock modules.
	* autogen.sh: Hack around a tools/config.rpath clash between Gnulib
	  and gettext.
	* configure.ac (CFLAGS): Add -Wno-missing-field-initializers for
	  GCC.